# beacon

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  beacon.dev.toml  beacon.toml  beacon.toml.example  mail-inspector.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
frontend/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
frontend/src/: App.tsx  index.tsx  test-setup.ts
frontend/src/components/: AppFooter.tsx  CategoryCard.tsx  DomainInput.tsx  GradeDisplay.tsx  HelpModal.tsx  IdleState.tsx  ResultsGrid.tsx  SummaryCard.tsx  helpers.ts
frontend/src/lib/: api.test.ts  api.ts  history.test.ts  history.ts  parse.test.ts  parse.ts  types.test.ts  types.ts
frontend/src/styles/: global.css
src/: config.rs  error.rs  input.rs  lib.rs  main.rs  routes.rs  scalar_docs.html  state.rs
src/checks/: bimi.rs  cross_validation.rs  dane.rs  dkim.rs  dmarc.rs  dnsbl.rs  dnssec.rs  fcrdns.rs  mod.rs  mta_sts.rs  mx.rs  spf.rs  tls_rpt.rs  util.rs
src/dns/: mod.rs  resolver.rs  test_support.rs
src/quality/: mod.rs  types.rs
src/security/: mod.rs  rate_limit.rs
tests/: enrichment_integration.rs
